[package]
name = "blobnom"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4.9", features = ["tokio", "gzip", "brotli", "zstd", "lz4"] }
async-trait = "0.1.88"
bytes = "1.5"
chitchat = "0.9"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
config = { version = "0.15.11", features = ["toml"] }
crc16 = "0.4"
fnv = "1.0.7"
futures = "0.3.31"
miette = { version = "7.6.0", features = ["fancy"] }
moka = { version = "0.12", features = ["future"] }
redis-protocol = { version = "6.0", features = ["std", "resp2", "bytes"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
